# bazel

./: .gitignore  Cargo.toml  WORKSPACE
cargo/: BUILD.bazel  crates.bzl
cargo/remote/: BUILD.adler32-1.2.0.bazel  BUILD.arrayvec-0.5.2.bazel  BUILD.atty-0.2.14.bazel  BUILD.bzip2-0.3.3.bazel  BUILD.bzip2-sys-0.1.9+1.0.8.bazel  BUILD.crossbeam-utils-0.7.2.bazel  BUILD.crossbeam-utils-0.8.1.bazel  BUILD.dirs-3.0.1.bazel  BUILD.dirs-sys-0.3.5.bazel  BUILD.flate2-1.0.14.bazel  BUILD.getrandom-0.1.16.bazel  BUILD.is_executable-1.0.0.bazel  BUILD.libc-0.2.81.bazel  BUILD.log-0.4.13.bazel  BUILD.maybe-uninit-2.0.0.bazel  BUILD.md5-0.7.0.bazel  BUILD.miniz_oxide-0.3.7.bazel  BUILD.num-integer-0.1.44.bazel  BUILD.num-traits-0.2.14.bazel  BUILD.proc-macro2-1.0.24.bazel  BUILD.slog-2.7.0.bazel  BUILD.syn-1.0.58.bazel  BUILD.thiserror-impl-1.0.23.bazel  BUILD.wasm-bindgen-0.2.69.bazel  BUILD.wasm-bindgen-backend-0.2.69.bazel  BUILD.wasm-bindgen-macro-support-0.2.69.bazel  BUILD.web-sys-0.3.46.bazel  BUILD.whoami-1.0.3.bazel  BUILD.winapi-0.3.9.bazel  BUILD.winapi-i686-pc-windows-gnu-0.4.0.bazel  BUILD.winapi-x86_64-pc-windows-gnu-0.4.0.bazel  BUILD.zip-0.5.9.bazel
src/: BUILD
src/main/protobuf/: BUILD
src/main/rust/: BUILD  archive_utils.rs  bazel_startup_options.rs  bazel_util.rs  exit_code.rs  lib.rs  main.rs  option_processor.rs  rc_file.rs  server_process_info.rs  startup_options.rs  workspace_layout.rs
src/main/rust/testdata/rc_file/: import_loop1.rc  import_loop2.rc  import_loop3.rc  import_loop_self.rc  import_workspace_prefix.rc  (+2 more)
tools/: update_dependencies.sh
