[package]
name = "bazel"
version = "0.1.0"
authors = ["The Bazel Authors"]
edition = "2018"

[lib]
path = "src/main/rust/lib.rs"

[[bin]]
name = "bazel"
path = "src/main/rust/bin/bazel.rs"

[dependencies]
dirs = "3.0.1"
slog = "2.7.0"
slog-async = "2.5.0"
slog-term = "2.6.0"

[workspace.metadata.raze]
workspace_path = "//cargo"
package_aliases_dir = "cargo"
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
genmode = "Remote"
